修改链接方式

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -153,6 +153,7 @@
             }
             W.pageTitle = "{{page_title}}";
             W.errorMessage = null;
+            localStorage.setItem('woid',W.webappOwnerId);
 
             {% if messages %}
             {% for message in messages %}
