修复Prunt找不到文件的错误

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -17,7 +17,8 @@
                 "args": {
                     "dest":"cdn/standard_static/css/webapp_v4_all.css",
                     "path_map": {
-                        "termite_static": "termite/static"
+                        "termite_static": "termite/static",
+                        "webapp_static": "webapp/modules/static"
                     }
                 }
             }
