--- a/weapp/card/templates/card/editor/list_weizoom_card_manager.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_manager.html
@@ -19,9 +19,8 @@
         <a href="/card/cards/get/">微众卡管理</a>
     </li>
     <li>
-        <a href="/card/cards/get/">制卡管理</a>
+        <a href="/card/cards/get/">用户权限管理</a>
     </li>
-    <li class="active">设置管理人员权限</li>
 </ul>
 <div class="panel panel-default mt20 pr" style="background-color:#EAEEF6">
     <div class="panel-heading" style="height:40px">
