--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -196,7 +196,7 @@ $(document).ready(function() {
         getTemplate: function() {
             var template ='<dl class="itemDeleteView2 wui-confirmView" style="margin: 10px 16px 5px 6px;">'
                     +'<div class="activated_to" style="margin-left: 4px;">'
-                    +'<label for="activated_to" class="star_show">领用人</label>'
+                    +'<label for="activated_to" class="star_show">申请人</label>'
                     +'<input type="text" id="activated_to" style="width: 100px;margin-left: 8px;">'
                     +'</div>'
                     +'<div class="card_remark" style="margin-top: 10px;margin-left: 4px;">'
