--- a/weapp/card/templates/card/editor/edit_weizoom_card_rule.html
+++ b/weapp/card/templates/card/editor/edit_weizoom_card_rule.html
@@ -199,7 +199,6 @@ $(document).ready(function() {
     });
 
     $('form').submit(function() {
-
         var startDate = $('#valid_time_from').val();
         var endDate = $('#valid_time_to').val();
         if (startDate.length > 0 && endDate.length == 0) {
@@ -212,11 +211,15 @@ $(document).ready(function() {
         }
         var start = new Date(startDate.replace("-", "/").replace("-", "/"));
         var end = new Date(endDate.replace("-", "/").replace("-", "/"));
+        var now_date = new Date();
         if ((startDate.length > 0 || endDate.length > 0) && start > end){
             W.showHint('error','开始日期不能大于结束日期！');
             return false;
         }
-
+        if(start < now_date){
+            W.showHint('error','开始日期不能小于当期日期！');
+            return false;
+        }
         $('#submitBtn').attr('disabled', true);
         if (!W.validate()) {
             $('#submitBtn').prop('disabled', false);
