更新微助力 1、分享成功后算用户参与 2、未关注的用户助力后，不立即增加助力值，等到其关注后再加入

--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -183,7 +183,23 @@
 
         //监听分享成功事件
         $(document).on("share:success",function(data){
-            alert('a hahahahahahahahahahaha');
+            //分享成功后就算该用户参与活动
+            W.getApi().call({
+                app: 'm/apps/powerme',
+                resource: 'powerme_participance',
+                method: 'post',
+                args: {
+                    webapp_owner_id: W.webappOwnerId,
+                    id: W.appRecordId,
+                    fid:'{{ page_owner_member_id }}'
+                },
+                success: function(data) {
+                    console.log(page_owner_name+'成功参与活动');
+                },
+                error: function(data) {
+                    console.error(data.errMsg);
+                }
+            });
         });
     });
 
