--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -162,6 +162,7 @@
     var is_powered = {% if is_powered %}true{% else %}false{% endif %};
     var is_self_page = {% if is_self_page %}true{% else %}false{% endif %};
     var page_owner_name = '{{ page_owner_name|safe }}';
+    var new_qrcode_url = {% if params_qrcode_url %}{{params_qrcode_url}}{% else %}{{qrcode_url}}{% endif %};
     $(function(){
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
@@ -202,7 +203,16 @@
                     openGuideMask();
                 }).show();
             }else{
-                $('.wa-power').html('帮'+page_owner_name+'助力').one('click', powerYou).show();
+                $('.wa-power').html('帮'+page_owner_name+'助力').one('click', function(){
+                    if (W.isMember){
+                        powerYou();
+                    }
+                    else{
+                        $('.xa-attention').find('img').attr('src',new_qrcode_url);
+                        openQrMask();
+                    }
+
+                }).show();
             }
 
 
