--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
@@ -31,13 +31,15 @@
                     <div class="xui-section-title xui-receiverInfo pr disTc">
                         <p class="mb10 em9 disT">
                             <span class="disTc xui-nameTd">
-                                {% if order %}<span class="xt-shipName">收货人:{{ order.ship_name }}</span>{% endif %}
+                                {% if order %}<span class="xt-shipName xa-shipName">收货人:</span>{% endif %}
                             </span>
                             <span class="disTc">
-                                <span class="xt-shipTel">{% if order %}{{ order.ship_tel }}{% endif %}</span>
+                                <span class="xt-shipTel xa-shipTel"></span>
                             </span>
                         </p>
-                        <div class="xui-address pr20">{% if order %}<span class="xt-shipArea">收货地址:{{ order.get_str_area }}</span><span class="xt-shipAddress ml5">{{ order.ship_address }}</span>{% endif %}</div>
+                        <div class="xui-address pr20">
+                            <span class="xt-shipArea xa-shipArea">收货地址:</span><span class="xt-shipAddress xa-shipAddress ml5"></span>
+                        </div>
                         <!-- <span class="xui-icon xui-icon-rightarrow"> </span> -->
                     </div>
                     <div class="xui-rightArrow disTc">
@@ -609,7 +611,23 @@
 
 {% block js %}
 <script type="text/javascript">
-initShipInofs();
+{#initShipInofs();#}
+
+// 从localStorage获取收货地址
+var ship_infos = JSON.parse(localStorage.ship_infos);
+console.log(localStorage.hasOwnProperty('ship_infos'))
+
+for(var i in ship_infos) {
+    if (ship_infos[i].is_selected){
+        var ship_info = ship_infos[i];
+        break;
+    }
+
+}
+$('.xa-shipName').text(ship_info.ship_name);
+$('.xa-shipTel').text(ship_info.ship_tel);
+$('.xa-shipArea').text(ship_info.area_str);
+$('.xa-shipAddress').text(ship_info.ship_address);
 
 if (/ipad|iphone|mac/i.test(navigator.userAgent)){
     $('#wrapper').addClass('xui-wrapper');
