[朱天琦][f_mall_5806]设置缓存5分钟

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
@@ -415,11 +415,11 @@
                     </p>
                     <p class="zoom">
                         <span class="fl xui-gray-8">积分抵扣</span>
-                        <span class="fr">- ￥<span class="xa-integralMoney xt-integralMoney"></span>
+                        <span class="fr">- ￥<span class="xa-integralMoney xt-integralMoney"></span></span>
                     </p>
                     <p class="zoom">
                         <span class="fl xui-gray-8">促销优惠</span>
-                        <span class="fr">- ￥<span class="xa-promotionMoney xt-promotionMoney"></span>
+                        <span class="fr">- ￥<span class="xa-promotionMoney xt-promotionMoney"></span></span>
                     </p>
                     <p class="zoom">
                         <span class="fl xui-gray-8">优惠劵</span>
@@ -611,7 +611,6 @@
 
 {% block js %}
 <script type="text/javascript">
-{#initShipInofs();#}
 
 // 从localStorage获取收货地址
 var ship_infos = JSON.parse(localStorage.ship_infos);
