--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
@@ -289,6 +289,7 @@
 
 {% block js %}
 <script type="text/javascript">
+initShipInofs();
 var $product = $('.xa-productContainer').children();
 if($product.length == 0){
     // $('.xa-invalidProductTitle').css('margin-top', '44px');
