--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -142,7 +142,7 @@
                 <td style="max-width: 160px;">
                     ${card.remark}
                 </td>
-                <td>
+                <td style="max-width: 120px;">
                     ${card.activated_to}
                 </td>
                 <td>
