--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/products_original.html
@@ -51,7 +51,11 @@
                 >
                     <a href='./?woid={{request.webapp_owner_id}}&module=mall&model=product&rid={{product.id}}'>
                         <div class="xui-inner-img">
+                        {% ifequal product.thumbnails_url|truncatechars:22 'http://weappimgtest...'%}
+                            <img src="{{ product.thumbnails_url }}!list">
+                        {% else %}
                             <img src="{{ product.thumbnails_url }}">
+                        {% endifequal%}
                         </div>
                         <h3 class="xt-productName">{{ product.name }}</h3>
                         <p class="xt-productPrice">￥{{ product.display_price | floatformat:2}}</p>
