--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -54,6 +54,7 @@
         <script type="text/javascript" src="/termite_static/v3/gmu/gmu-2.1.1.js"></script>
         <script type="text/javascript" src="/termite_static/v3/lib/idangerous.swiper.js"></script>
         <script type="text/javascript" src="/termite_static/v3/lib/fastclick.js"></script>
+        <script type="text/javascript" src="/termite_static/v3/lib/exif.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/system.js"></script>
         <script type="text/javascript" src="/termite_static/backbone/underscore-1.4.4.min.js"></script>
         <script type="text/javascript" src="/termite_static/v3/webapp/backbone_lite.js"></script>
