--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_review_create.html
@@ -166,6 +166,7 @@
 
 {% block js %}
 
+<script type="text/javascript" src="/termite_static/v3/lib/exif.js"></script>
 <script type="text/javascript" src="/termite_static/v3/gmu/widget/addImg.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
