mod 删除带参数二维码

--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -437,7 +437,7 @@
                             {{/if}}
 
                             {{if field.isShowCloseButton}}
-                                <button type="button" class="deleteImage xa-deleteImageButton xui-deleteImageButton" style="display:none;"><span>&times;</span></button>
+                                <button type="button" class="deleteQrcode xa-deleteQrcodeButton xui-deleteQrcodeButton" style="display:none;"><span>&times;</span></button>
                             {{/if}}
                         </div>
                     </div>
