--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -9,7 +9,7 @@
         width: 100%;
         height: 30px;
         padding: 10px 0;
-        font-size: 12px;
+        font-size: 0.8rem;
         line-height: 30px;
         background-color: white;
         border-top: 1px solid gainsboro;
@@ -309,7 +309,7 @@
         var toggle_show = function(){
             rect = $top[0].getBoundingClientRect();
             if(rect && djage()){
-                $('.wa-masterinfo').css('opacity',0.8);
+                $('.wa-masterinfo').css('opacity',0.86);
             }else{
                 $('.wa-masterinfo').css('opacity',0);
             }
