--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -431,9 +431,9 @@
                                 </button>
 
                             {{if field.help}}
-                            <span style="color: #666;">
+                            <div style="color: #666;">
                                 {{html field.help.replace(/\n/g, "<br/>")}}
-                            </span>
+                            </div>
                             {{/if}}
 
                             {{if field.isShowCloseButton}}
