#修改错误信息

--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -73,7 +73,7 @@
             <tr>
                 <th>
                     <input class="xa-select-all fl " style="cursor: default;margin-top:2px;" type="checkbox" value="1" name="select-all">
-                    <span class="tx_searchable">
+                    <span class="">
                         卡号
                     </span>
                 </th>
