--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -18,7 +18,9 @@
     }
     .wui-masterinfo span{
         margin: 0 10px;
-        font-size: 1em;
+    }
+    .wui-masterinfo b {
+        font-size: 0.8rem;
     }
     .wui-mask{
         position: absolute;
