--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -1046,7 +1046,7 @@ input.ui-input-text, textarea.ui-input-text {
     display: block;
     position: absolute;
     left: 0;
-    bottom: 5px;
+    bottom: 0;
     height:32px;
     background-color: #e3e3e3;
     width:1px;
@@ -3800,8 +3800,8 @@ a.xui-pointCardLink:link,a.xui-pointCardLink:visited{color:#fff;}
 }
 .xui-productReviewCreatePage .xui-productPhoto .xui-remove i{
     background: url(/static_v2/img/webapp/mall/sprite0506.png);
-    -webkit-background-size: 195px 123px;
-    background-size: 195px 123px;
+    -webkit-background-size: 225px 123px;
+    background-size: 225px 123px;
     background-position: -44px 0;
     width: 23px;
     height: 22px;
