微众卡权限优化

--- a/weapp/card/templates/card/editor/edit_account_has_permissions.html
+++ b/weapp/card/templates/card/editor/edit_account_has_permissions.html
@@ -102,8 +102,11 @@
 				ids.push($(this).attr('value'));
 			});
 			var idStr = ids.join(',');
-			console.log(idStr.length)
-			if (idStr.length>=14){
+			idStr_longth=idStr.split(',').length
+			if (idStr_longth<5){
+				W.showHint('error','请清除搜索内容');
+			}
+			else{	
 				W.getApi().call({
 					app: 'card',
 					api: 'weizoom_card_account_permission/update',
@@ -118,35 +121,35 @@
 					}
 				});
 			}
-			else{
-				var $el = $(event.target);
-				W.requireConfirm({
-					$el: $el,
-					width: 800,
-					height: 55,
-					isTitle: false,
-					msg: '确认保存则其他商家将取消微信卡支付权限，请清除搜索内容后再保存！',
-					confirm: function() {
-						W.getApi().call({
-							app: 'card',
-							api: 'weizoom_card_account_permission/update',
-							args: {
-								'owner_ids': idStr.trim(),
-							},
-							success: function() {
-								W.showHint('success','设置成功！');
-								setTimeout(function() {
-															location.reload()
-														}, 800);
+			// else{
+			// 	var $el = $(event.target);
+			// 	W.requireConfirm({
+			// 		$el: $el,
+			// 		width: 800,
+			// 		height: 55,
+			// 		isTitle: false,
+			// 		msg: '确认保存则其他商家将取消微信卡支付权限，请清除搜索内容后再保存！',
+			// 		confirm: function() {
+			// 			W.getApi().call({
+			// 				app: 'card',
+			// 				api: 'weizoom_card_account_permission/update',
+			// 				args: {
+			// 					'owner_ids': idStr.trim(),
+			// 				},
+			// 				success: function() {
+			// 					W.showHint('success','设置成功！');
+			// 					setTimeout(function() {
+			// 												location.reload()
+			// 											}, 800);
 
-							},
-							error: function() {
-								W.showHint('error','设置失败！');
-							}
-						});
-					}
-				});
-			}	
+			// 				},
+			// 				error: function() {
+			// 					W.showHint('error','设置失败！');
+			// 				}
+			// 			});
+			// 		}
+			// 	});
+			// }	
 			return false;
 		});
 	});
