--- a/weapp/card/templates/card/editor/list_weizoom_card.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card.html
@@ -66,7 +66,7 @@
                 <tbody>
                     {{each(i, card_rule) items}}
                     <tr>
-                        <td style="width:120px;max-width:150px;">
+                        <td style="width:120px;">
                             <a href="/card/card_detail/get/?id=${card_rule.id}">${card_rule.name}</a>
                         </td>
                         <td>${card_rule.money}</td>
