--- a/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
@@ -145,6 +145,7 @@
 					{{if (item.status === '进行中')}}
 					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
 					{{/if}}
+					<a href="javascript:void(0)" class="xa-pause-to-clean-history xui-hide" data-id=${item.id}>暂停</a>
 				</td>
 			</tr>
 			{{/each}}
@@ -225,6 +226,26 @@ $(document).ready(function() {
 		var previewUrl = '/m/apps/powerme/m_powerme/?woid='+W.uid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
+
+    $('body').delegate('.xa-pause-to-clean-history', 'click', function(){
+        console.log(111);
+        var record_id = $(this).attr('data-id');
+        W.getApi().call({
+			app: 'apps/powerme',
+			resource: 'powerme_status',
+			method: 'put',
+			args: {
+				id: record_id
+			},
+			success: function(data) {
+				var page_id = data.page_id;
+                location.href = location.host+'/powerme/powerme/?id='+record_id+'&related_page_id='+page_id;
+			},
+			error: function(response) {
+				W.showHint('error', '更新状态失败！');
+			}
+		});
+    });
 	
 	$('.xa-search').click(function(event) {
 		var name = $.trim($('[name="name"]').val());
