修改用户权限

--- a/weapp/card/templates/card/editor/edit_account_has_permissions.html
+++ b/weapp/card/templates/card/editor/edit_account_has_permissions.html
@@ -104,7 +104,7 @@
 			var idStr = ids.join(',');
 			idStr_longth=idStr.split(',').length
 			if (idStr_longth<5){
-				W.showHint('error','提请清除搜索内容');
+				W.showHint('error','请清除搜索内容');
 			}
 			else{	
 				W.getApi().call({
